# spawn

./: Cargo.toml
cc_utils/src/: lib.rs
spawn_worker/: Cargo.toml  build.rs
spawn_worker/src/: lib.rs  trampoline.c
spawn_worker/src/unix/: mod.rs  spawn.rs
spawn_worker/tests/: trampoline.rs
tests/spawn_from_lib/: Cargo.toml  build.rs
tests/spawn_from_lib/src/: lib.rs
tests/spawn_from_lib/tests/: spawn.rs
